--- a/.env
+++ b/.env
@@ -1,2 +1,2 @@
 NODE_ENV=development
-FRONTEND_URL=https://tuiter-node-server-app-cs5610-s232.onrender.com
+FRONTEND_URL=https://a5--resilient-clafoutis-a7cc91.netlify.app/
