--- a/.env
+++ b/.env
@@ -1,2 +1,2 @@
 NODE_ENV=development
-FRONTEND_URL=https://a5--resilient-clafoutis-a7cc91.netlify.app/
+FRONTEND_URL=https://a5--resilient-clafoutis-a7cc91.netlify.app/api
