--- a/.env
+++ b/.env
@@ -1,4 +1,4 @@
 NODE_ENV=development
 FRONTEND_URL=https://a5--resilient-clafoutis-a7cc91.netlify.app
-#FRONTEND_URL=http://localhost:3000
+FRONTEND_URL_LOCAL=http://localhost:3000
 #ALLOWED_ORIGINS=https://a5--resilient-clafoutis-a7cc91.netlify.app
