--- a/.env
+++ b/.env
@@ -1,4 +1,5 @@
 NODE_ENV=development
 FRONTEND_URL=https://a5--resilient-clafoutis-a7cc91.netlify.app
 FRONTEND_URL_LOCAL=http://localhost:3000
+DB_CONNECTION_STRING=mongodb+srv://morganchri:<Georgejonathan.1221>@cluster0tuiter.fnduq84.mongodb.net/?retryWrites=true&w=majority
 #ALLOWED_ORIGINS=https://a5--resilient-clafoutis-a7cc91.netlify.app
